# deepTechno

./: .gitignore  .python-version  Makefile  pyproject.toml
deeptechno/: run_model.py  train.py
deeptechno/evaluate/: evaluate.py
deeptechno/generate/: generatte_LSTM.py
deeptechno/manager/: manager.py
deeptechno/model/: loss.py
deeptechno/preprocess/: data_postprocess.py  data_preprocess.py  midi_encoder_decoder.py
deeptechno/sourcing/: sourcing.py
deeptechno/training/: train_LSTM.py
results/: test.mid
results/training_checkpoints/: checkpoint  ckpt-1.data-00000-of-00001  ckpt-1.index  ckpt_1.weights.h5  ckpt_2.weights.h5  ckpt_3.weights.h5  ckpt_4.weights.h5  ckpt_5.weights.h5
