[tool.poetry]
name = "deepTechno"
version = "0.1.0"
description = ""
authors = ["juan garassino <juan.garassino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
pretty-midi = "^0.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
