[tool.poetry]
name = "deepTechno"
version = "0.1.0"
description = ""
authors = ["juan garassino <juan.garassino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
pretty-midi = "^0.2.10"
tensorflow = "^2.16.1"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
pydub = "^0.25.1"
ipython = "^8.23.0"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
